tests/snapshots/test_rust__basic_unix.snap
---
source: tests/test_rust.rs
info:
  program: log2src
  args:
    - "-d"
    - examples/basic.rs
    - "-l"
    - tests/resources/rust/basic.log
    - "-f"
    - "\\[\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}Z \\w+ \\w+\\]\\s+(?<body>.*)"
---
success: true
exit_code: 0
----- stdout -----
{"srcRef":{"sourcePath":"examples/basic.rs","lineNumber":6,"column":11,"name":"main","text":"\"Hello from main\"","args":[],"vars":[]},"variables":{},"stack":[[{"sourcePath":"examples/basic.rs","lineNumber":8,"column":8,"name":"main","text":"foo","args":[],"vars":[]}]]}
{"srcRef":{"sourcePath":"examples/basic.rs","lineNumber":13,"column":11,"name":"foo","text":"\"Hello from foo i={}\"","args":["Placeholder"],"vars":["i"]},"variables":{"i":"0"},"stack":[[{"sourcePath":"examples/basic.rs","lineNumber":8,"column":8,"name":"main","text":"foo","args":[],"vars":[]}]]}
{"srcRef":{"sourcePath":"examples/basic.rs","lineNumber":13,"column":11,"name":"foo","text":"\"Hello from foo i={}\"","args":["Placeholder"],"vars":["i"]},"variables":{"i":"1"},"stack":[[{"sourcePath":"examples/basic.rs","lineNumber":8,"column":8,"name":"main","text":"foo","args":[],"vars":[]}]]}
{"srcRef":{"sourcePath":"examples/basic.rs","lineNumber":13,"column":11,"name":"foo","text":"\"Hello from foo i={}\"","args":["Placeholder"],"vars":["i"]},"variables":{"i":"2"},"stack":[[{"sourcePath":"examples/basic.rs","lineNumber":8,"column":8,"name":"main","text":"foo","args":[],"vars":[]}]]}

----- stderr -----
