tests/snapshots/test_rust__basic_windows.snap
---
source: tests\test_rust.rs
info:
  program: log2src
  args:
    - "-d"
    - examples\basic.rs
    - "-l"
    - tests\resources\rust\basic.log
---
success: true
exit_code: 0
----- stdout -----
{"srcRef":{"sourcePath":"examples\\basic.rs","lineNumber":6,"column":11,"name":"main","text":"\"Hello from main\"","vars":[]},"variables":{},"stack":[[{"sourcePath":"examples\\basic.rs","lineNumber":8,"column":8,"name":"main","text":"foo","vars":[]}]]}
{"srcRef":{"sourcePath":"examples\\basic.rs","lineNumber":13,"column":11,"name":"foo","text":"\"Hello from foo i={}\"","vars":["i"]},"variables":{"i":"0"},"stack":[[{"sourcePath":"examples\\basic.rs","lineNumber":8,"column":8,"name":"main","text":"foo","vars":[]}]]}
{"srcRef":{"sourcePath":"examples\\basic.rs","lineNumber":13,"column":11,"name":"foo","text":"\"Hello from foo i={}\"","vars":["i"]},"variables":{"i":"1"},"stack":[[{"sourcePath":"examples\\basic.rs","lineNumber":8,"column":8,"name":"main","text":"foo","vars":[]}]]}
{"srcRef":{"sourcePath":"examples\\basic.rs","lineNumber":13,"column":11,"name":"foo","text":"\"Hello from foo i={}\"","vars":["i"]},"variables":{"i":"2"},"stack":[[{"sourcePath":"examples\\basic.rs","lineNumber":8,"column":8,"name":"main","text":"foo","vars":[]}]]}

----- stderr -----
